--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.0",
+    "@zxing/browser": "^0.1.5",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
